# bazel_cxx20_module_test

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: ci.yml  ci_clang.yml  ci_gcc.yml
integration_test/: test_all.sh
integration_test/test_cascade_build/: BUILD.bazel  bar.cc  foo.cc  test.sh
integration_test/test_circular/: BUILD.bazel  test.sh
integration_test/test_duplicate/: BUILD.bazel  test.sh
integration_test/test_increment_build/: bar.cppm  foo.cppm  main.cc  test.sh
integration_test/test_increment_build_2/: BUILD.bazel  bar.cppm  test.sh
integration_test/test_increment_build_3/: bar.cppm  foo.cppm  main.cc  test.sh
integration_test/test_module_duplication/: A.cppm  C.cppm  test.sh
integration_test/test_module_not_found/: BUILD.bazel  test.sh
integration_test/test_module_not_found_2/: BUILD.bazel  main.cc  test.sh
integration_test/test_module_not_found_3/: BUILD.bazel  test.sh
integration_test/test_module_visibility/: A.cppm  B.cppm  BUILD.bazel  test.sh
integration_test/test_module_visibility_2/: A.cppm  BUILD.bazel  C.cppm  test.sh
integration_test/test_only_requested_bmi_build/: BUILD.bazel  test.sh
unit_test/test_assembler/: BUILD.bazel  foo.cppm  main.cpp
unit_test/test_binary_output_layout/: BUILD.bazel  README.md  foo.cpp
unit_test/test_c_source_file/: BUILD.bazel  main.cpp
unit_test/test_deep_chain/: BUILD.bazel
unit_test/test_header_in_srcs_attr/: BUILD.bazel  README.md  bar.cpp  main.cpp
unit_test/test_lib_empty_src_but_only_module/: BUILD.bazel  a.cppm  a1.cppm  a2.cppm
unit_test/test_lib_indirect_module_dep/: BUILD.bazel  a.cpp  a.cppm  b.cppm  main.cpp
unit_test/test_library_empty_srcs/: README.md
unit_test/test_library_empty_srcs/bar/: BUILD.bazel  bar.cpp
unit_test/test_library_empty_srcs/foo/: BUILD.bazel
unit_test/test_module_dep_chain/: BUILD.bazel  Makefile  b.cppm
unit_test/test_module_name/: BUILD.bazel  bar.cpp  fake_name.cppm
unit_test/test_module_partition/: BUILD.bazel  Impl.cpp  M.cppm  Makefile  User.cpp  impl_part.cppm  interface_part.cppm
unit_test/test_non_module_srcs/: BUILD.bazel  bar.cpp  bar.h  foo.cpp  foo.cppm  main.cpp
unit_test/test_same_filename/: BUILD.bazel  foo.cppm
unit_test/test_same_src_name_in_different_folder/: BUILD.bazel
unit_test/test_template_class/: BUILD.bazel  bar.cppm  build.sh  clean.sh  foo.cppm
unit_test/test_use_header_from_indirect_dep/: BUILD.bazel  README.md  main.cpp
unit_test/test_use_header_from_indirect_dep/bar/: BUILD.bazel  bar.cpp  bar.cppm
unit_test/test_use_header_from_indirect_dep/foo/: BUILD.bazel  foo.cppm
unit_test/test_use_header_from_indirect_dep/foo/src/: foo.cpp  foo.h
unit_test/test_use_lib_from_different_package/: BUILD.bazel  foobar.cppm  main.cpp  main2.cpp
unit_test/test_use_lib_from_different_package/3rd/foo/: BUILD.bazel
unit_test/test_use_lib_from_different_package/3rd/foo/include/: foo.h
unit_test/test_use_lib_from_different_package/3rd/foo/src/: foo.cpp
unit_test/test_use_lib_from_different_package/lib/: BUILD.bazel
unit_test/test_use_lib_from_different_package/lib/bar/: bar.cpp  bar.h
unit_test/test_use_same_module_file_with_different_binary/: BUILD.bazel  a.cppm  c.cpp
unit_test/test_use_same_module_file_with_different_library/: BUILD.bazel  README.md  bar.cpp  bar.cppm  foo.cppm
