cc_binary(
    name = "duplicate",
    srcs = ["main.cxx"],
    copts = ["-std=c++20"],
    defines = ["NDUPLICATE=1"],
    features = ["cpp20_module"],
    module_interfaces = ["duplicate.cxx"],
)

cc_binary(
    name = "duplicate2",
    srcs = ["main.cxx"],
    copts = ["-std=c++20"],
    defines = ["NDUPLICATE=2"],
    features = ["cpp20_module"],
    module_interfaces = ["duplicate.cxx"],
)
