cc_binary(
    name = "duplicate",
    srcs = ["main.cxx"],
    copts = ["-std=c++20"],
    defines = ["NDUPLICATE=1"],
    features = ["cpp_modules"],
    module_interfaces = ["duplicate.cxx"],
)

cc_binary(
    name = "duplicate2",
    srcs = ["main.cxx"],
    copts = ["-std=c++20"],
    defines = ["NDUPLICATE=2"],
    features = ["cpp_modules"],
    module_interfaces = ["duplicate.cxx"],
)
