cc_library(
    name = "foo",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["foo.cppm"],
)

cc_library(
    name = "lib",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    deps = [":foo"],
)

cc_binary(
    name = "demo",
    srcs = ["main.cc"],
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    deps = [":lib"],
)
