cc_library(
    name = "A",
    copts = ["-std=c++20"],
    features = ["cpp_modules"],
    module_interfaces = ["A.cppm"],
    deps = [
        ":B",
        ":C",
    ],
)

cc_library(
    name = "B",
    copts = ["-std=c++20"],
    features = ["cpp_modules"],
    module_interfaces = ["B.cppm"],
)

cc_library(
    name = "C",
    copts = ["-std=c++20"],
    features = ["cpp_modules"],
    module_interfaces = ["C.cppm"],
)
