cc_library(
    name = "foo",
    srcs = glob(["*.S"]),
    copts = ["-std=c++20"],
    module_interfaces = ["foo.cppm"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = ["-std=c++20"],
    deps = [":foo"],
)
