cc_library(
    name = "a",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["a.cxx"],
)

cc_library(
    name = "b",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["b.cxx"],
    deps = [":a"],
)

cc_library(
    name = "c",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["c.cxx"],
    deps = [":b"],
)

cc_library(
    name = "d",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["d.cxx"],
    deps = [":c"],
)

cc_library(
    name = "e",
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    module_interfaces = ["e.cxx"],
    deps = [":d"],
)

cc_test(
    name = "demo",
    srcs = ["main.cxx"],
    copts = ["-std=c++20"],
    features = ["cpp20_module"],
    deps = [":e"],
)
