cc_test(
    name = "main2",
    srcs = ["main2.cpp"],
    copts = [
        "-std=c++20",
    ],
    module_interfaces = ["foobar.cppm"],
    deps = [
        "//unit_test/test_use_lib_from_different_package/3rd/foo",
        "//unit_test/test_use_lib_from_different_package/lib:bar",
    ],
)

cc_test(
    name = "main",
    srcs = ["main.cpp"],
    copts = ["-std=c++20"],
    deps = [
        "//unit_test/test_use_lib_from_different_package/3rd/foo",
        "//unit_test/test_use_lib_from_different_package/lib:bar",
    ],
)
